load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/metarsit/exchange/examples/myTrades",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "myTrades",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
