load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/metarsit/exchange/examples/ticker_price",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "ticker_price",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
