load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "get.go",
        "post.go",
        "types.go",
    ],
    importpath = "github.com/metarsit/exchange/internal/method",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "get_test.go",
        "post_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@tools_gotest//assert:go_default_library"],
)
